add photos to the webpage

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@
       content="Professional Photographer available for weddings and special events."
     />
     <meta name="robots" content="index,follow" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/src/scss/main.scss" />
     <title>Jakub Sobczak Portfolio</title>
   </head>
   <body>
@@ -46,14 +46,14 @@
         <div class="hero-images">
           <img
             class="hero-elena"
-            src="./img/zdjęcie_2.jpg"
+            src="/src/assets/img/zdjęcie_2.jpg"
             alt="picture of elena joy"
           />
         </div>
       </section>
       <section class="about" id="about">
         <div class="about-image">
-          <img src="./img/zdjęcie_4.jpg" alt="portrait-picture" />
+          <img src="/src/assets/img/zdjęcie_4.jpg" alt="portrait-picture" />
         </div>
         <div class="about-text flex" id="work">
           <h2>Jakub Sobczak</h2>
@@ -82,9 +82,9 @@
         <header class="gallery-head">
           <h2>Portfolio</h2>
         </header>
-        <img class="gallery1" src="./img/strona_1.png" alt="man in suit" />
-        <img class="gallery2" src="./img/strona_2.jpg" alt="lady in coat" />
-        <img class="gallery1" src="./img/strona_3.jpg" alt="lady in t-shirt" />
+        <img class="gallery1" src="/src/assets/img/strona_1.png" alt="man in suit" />
+        <img class="gallery2" src="/src/assets/img/strona_2.jpg" alt="lady in coat" />
+        <img class="gallery1" src="/src/assets/img/strona_3.jpg" alt="lady in t-shirt" />
       </div>
       <section class="contact" id="contact">
         <div class="form-wrapper flex">
@@ -98,7 +98,7 @@
             <button type="submit">Submit</button>
           </form>
         </div>
-        <img src="./img/zdjęcie_3.png" alt="message-icon" />
+        <img src="/src/assets/img/strona_3.jpg" alt="message-icon" />
       </section>
     </main>
     <footer>
@@ -106,20 +106,18 @@
       <ul>
         <li>
           <a href="#"
-            ><img src="./img/youtube-symbol 1.svg" alt="youtube-social-media"
+            ><img src="/src/assets/img/youtube-symbol 1.svg" alt="youtube-social-media"
           /></a>
         </li>
         <li>
           <a href="https://www.facebook.com/"
-            ><img src="./img/twitter 1.svg" alt="twitter-social-media"
+            ><img src="/src/assets/img/twitter 1.svg" alt="twitter-social-media"
           /></a>
         </li>
         <li>
-          <a href="https://github.com/Jakub-Sobczak"><img src="./img/GitHub-Mark-Light-32px.png" alt="github" /></a>
+          <a href="https://github.com/Jakub-Sobczak"><img src="/src/assets/img/GitHub-Mark-Light-32px.png" alt="github" /></a>
         </li>
       </ul>
     </footer>
-
-    <script src="app.js"></script>
   </body>
 </html>
