add message photo

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -98,7 +98,7 @@
             <button type="submit">Submit</button>
           </form>
         </div>
-        <img src="/src/assets/img/strona_3.jpg" alt="message-icon" />
+        <img src="/src/assets/img/zdjęcie_3.png" alt="message-icon" />
       </section>
     </main>
     <footer>
