--- a/src/pages/another.html
+++ b/src/pages/another.html
@@ -1,12 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WTF Webpack starterkit</title>
-</head>
-<body>
-    <div class="hello"></div>
-    <h1>hello world</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Professional Photographer available for weddings and special events."
+    />
+    <meta name="robots" content="index,follow" />
+    <link rel="stylesheet" href="/src/scss/main.scss" />
+    <title>Jakub Sobczak Portfolio</title>
+  </head>
+  <body>
+    <header class="main-head">
+      <nav>
+        <h1 id="logo">Jakub Sobczak</h1>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="/index.html">English</a></li>
+        </ul>
+        <div class="burger">
+          <span class="line1"></span>
+          <span class="line2"></span>
+          <span class="line3"></span>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="hero-introduction flex">
+          <h2>
+            Jakub Sobczak <br />
+            Portfolio
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+            minima assumenda expedita similique quaerat maiores ab, itaque hic
+            explicabo eaque!
+          </p>
+          <a href="#gallery">More about me</a>
+        </div>
+        <div class="hero-images">
+          <img
+            class="hero-elena"
+            src="/src/assets/img/zdjęcie_2.jpg"
+            alt="picture of elena joy"
+          />
+        </div>
+      </section>
+      <section class="about" id="about">
+        <div class="about-image">
+          <img src="/src/assets/img/zdjęcie_4.jpg" alt="portrait-picture" />
+        </div>
+        <div class="about-text flex" id="work">
+          <h2>Jakub Sobczak</h2>
+          <div class="about-life">
+            <h3>My Life</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
+              consectetur asperiores harum dolore nihil fuga?Lorem ipsum dolor
+              sit, amet consectetur adipisicing elit. Voluptas, maxime
+              reprehenderit. Assumenda necessitatibus id consectetur asperiores
+              harum dolore nihil fuga?
+            </p>
+          </div>
+          <div class="about-work">
+            <h3>My Work</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
+              consectetur asperiores harum dolore nihil fuga?
+            </p>
+          </div>
+        </div>
+      </section>
+      <div class="gallery" id="gallery">
+        <header class="gallery-head">
+          <h2>Portfolio</h2>
+        </header>
+        <img class="gallery1" src="/src/assets/img/strona_1.png" alt="man in suit" />
+        <img class="gallery2" src="/src/assets/img/strona_2.jpg" alt="lady in coat" />
+        <img class="gallery1" src="/src/assets/img/strona_3.jpg" alt="lady in t-shirt" />
+      </div>
+      <section class="contact" id="contact">
+        <div class="form-wrapper flex">
+          <h2>
+            Get in <br />
+            <span> touch.</span>
+          </h2>
+          <form>
+            <label for="email">Your Email:</label>
+            <input type="email" id="email" required />
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+        <img src="/src/assets/img/zdjęcie_3.png" alt="message-icon" />
+      </section>
+    </main>
+    <footer>
+      <h4>Jakub Sobczak &copy; 2021</h4>
+      <ul>
+        <li>
+          <a href="#"
+            ><img src="/src/assets/img/youtube-symbol 1.svg" alt="youtube-social-media"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/"
+            ><img src="/src/assets/img/twitter 1.svg" alt="twitter-social-media"
+          /></a>
+        </li>
+        <li>
+          <a href="https://github.com/Jakub-Sobczak"><img src="/src/assets/img/GitHub-Mark-Light-32px.png" alt="github" /></a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
