add github link

--- a/src/pages/another.html
+++ b/src/pages/another.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -82,7 +82,7 @@
         <header class="gallery-head">
           <h2>Portfolio</h2>
         </header>
-        <img class="gallery1" src="/src/assets/img/strona_1.png" alt="man in suit" />
+        <img a href="https://github.com/Jakub-Sobczak/portfolio" class="gallery1" src="/src/assets/img/strona_1.png" alt="man in suit" />
         <img class="gallery2" src="/src/assets/img/strona_2.jpg" alt="lady in coat" />
         <img class="gallery1" src="/src/assets/img/strona_3.jpg" alt="lady in t-shirt" />
       </div>
