--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -82,7 +82,7 @@
         <header class="gallery-head">
           <h2>Portfolio</h2>
         </header>
-        <img class="gallery1" src="/src/assets/img/strona_1.png" alt="man in suit" />
+        <img a href="https://github.com/Jakub-Sobczak/portfolio" class="gallery1" src="/src/assets/img/strona_1.png" alt="man in suit" />
         <img class="gallery2" src="/src/assets/img/strona_2.jpg" alt="lady in coat" />
         <img class="gallery1" src="/src/assets/img/strona_3.jpg" alt="lady in t-shirt" />
       </div>
