add Portfolio link

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -80,11 +80,23 @@
       </section>
       <div class="gallery" id="gallery">
         <header class="gallery-head">
-          <h2>Portfolio</h2>
+         <h2> <a href="https://github.com/Jakub-Sobczak" class="link">Portfolio</a></h2>
         </header>
-        <img  class="gallery1" src="/src/assets/img/strona_1.png" alt="html code" /> <a href="https://github.com/Jakub-Sobczak/portfolio"></a>
-        <img class="gallery2" src="/src/assets/img/strona_2.jpg" alt="html code" />
-        <img class="gallery1" src="/src/assets/img/strona_3.jpg" alt="html code" />
+        <img 
+          class="gallery1"
+          src="/src/assets/img/strona_1.png"
+          alt="html code"
+        />
+        <img
+          class="gallery2"
+          src="/src/assets/img/strona_2.jpg"
+          alt="html code"
+        />
+        <img
+          class="gallery1"
+          src="/src/assets/img/strona_3.jpg"
+          alt="html code"
+        />
       </div>
       <section class="contact" id="contact">
         <div class="form-wrapper flex">
@@ -106,16 +118,22 @@
       <ul>
         <li>
           <a href="#"
-            ><img src="/src/assets/img/youtube-symbol 1.svg" alt="youtube-social-media"
+            ><img
+              src="/src/assets/img/youtube-symbol 1.svg"
+              alt="youtube-social-media"
           /></a>
         </li>
         <li>
           <a href="https://www.facebook.com/"
-            ><img src="/src/assets/img/twitter 1.svg" alt="twitter-social-media"
+            ><img
+              src="/src/assets/img/twitter 1.svg"
+              alt="twitter-social-media"
           /></a>
         </li>
         <li>
-          <a href="https://github.com/Jakub-Sobczak"><img src="/src/assets/img/GitHub-Mark-Light-32px.png" alt="github" /></a>
+          <a href="https://github.com/Jakub-Sobczak"
+            ><img src="/src/assets/img/GitHub-Mark-Light-32px.png" alt="github"
+          /></a>
         </li>
       </ul>
     </footer>
