--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta
-      name="description"
-      content="Professional Photographer available for weddings and special events."
-    />
     <meta name="robots" content="index,follow" />
     <link rel="stylesheet" href="/src/scss/main.scss" />
     <title>Jakub Sobczak Portfolio</title>
@@ -80,9 +76,13 @@
       </section>
       <div class="gallery" id="gallery">
         <header class="gallery-head">
-         <h2> <a href="https://github.com/Jakub-Sobczak" class="link">Portfolio</a></h2>
+          <h2>
+            <a href="https://github.com/Jakub-Sobczak" class="link"
+              >Portfolio</a
+            >
+          </h2>
         </header>
-        <img 
+        <img
           class="gallery1"
           src="/src/assets/img/strona_1.png"
           alt="html code"
