--- a/src/pages/another.html
+++ b/src/pages/another.html
@@ -17,9 +17,9 @@
       <nav>
         <h1 id="logo">Jakub Sobczak</h1>
         <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about">O mnie</a></li>
+          <li><a href="#work">Praca</a></li>
+          <li><a href="#contact">Kontakt</a></li>
           <li><a href="/index.html">English</a></li>
         </ul>
         <div class="burger">
@@ -41,7 +41,7 @@
             minima assumenda expedita similique quaerat maiores ab, itaque hic
             explicabo eaque!
           </p>
-          <a href="#gallery">More about me</a>
+          <a href="#gallery">Więcej</a>
         </div>
         <div class="hero-images">
           <img
@@ -58,7 +58,7 @@
         <div class="about-text flex" id="work">
           <h2>Jakub Sobczak</h2>
           <div class="about-life">
-            <h3>My Life</h3>
+            <h3>O mnie</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Voluptas, maxime reprehenderit. Assumenda necessitatibus id
@@ -69,7 +69,7 @@
             </p>
           </div>
           <div class="about-work">
-            <h3>My Work</h3>
+            <h3>Praca</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Voluptas, maxime reprehenderit. Assumenda necessitatibus id
@@ -82,20 +82,32 @@
         <header class="gallery-head">
           <h2>Portfolio</h2>
         </header>
-        <img class="gallery1" src="/src/assets/img/strona_1.png" alt="man in suit" />
-        <img class="gallery2" src="/src/assets/img/strona_2.jpg" alt="lady in coat" />
-        <img class="gallery1" src="/src/assets/img/strona_3.jpg" alt="lady in t-shirt" />
+        <img
+          class="gallery1"
+          src="/src/assets/img/strona_1.png"
+          alt="man in suit"
+        />
+        <img
+          class="gallery2"
+          src="/src/assets/img/strona_2.jpg"
+          alt="lady in coat"
+        />
+        <img
+          class="gallery1"
+          src="/src/assets/img/strona_3.jpg"
+          alt="lady in t-shirt"
+        />
       </div>
       <section class="contact" id="contact">
         <div class="form-wrapper flex">
           <h2>
-            Get in <br />
-            <span> touch.</span>
+            Bądźmy w <br />
+            <span> kontakcie.</span>
           </h2>
           <form>
-            <label for="email">Your Email:</label>
+            <label for="email">Wprowadź Email:</label>
             <input type="email" id="email" required />
-            <button type="submit">Submit</button>
+            <button type="submit">Potwierdź</button>
           </form>
         </div>
         <img src="/src/assets/img/zdjęcie_3.png" alt="message-icon" />
@@ -106,16 +118,22 @@
       <ul>
         <li>
           <a href="#"
-            ><img src="/src/assets/img/youtube-symbol 1.svg" alt="youtube-social-media"
+            ><img
+              src="/src/assets/img/youtube-symbol 1.svg"
+              alt="youtube-social-media"
           /></a>
         </li>
         <li>
           <a href="https://www.facebook.com/"
-            ><img src="/src/assets/img/twitter 1.svg" alt="twitter-social-media"
+            ><img
+              src="/src/assets/img/twitter 1.svg"
+              alt="twitter-social-media"
           /></a>
         </li>
         <li>
-          <a href="https://github.com/Jakub-Sobczak"><img src="/src/assets/img/GitHub-Mark-Light-32px.png" alt="github" /></a>
+          <a href="https://github.com/Jakub-Sobczak"
+            ><img src="/src/assets/img/GitHub-Mark-Light-32px.png" alt="github"
+          /></a>
         </li>
       </ul>
     </footer>
