Portfolio text size

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -78,7 +78,7 @@
         <header class="gallery-head">
           <h2>
             <a href="https://github.com/Jakub-Sobczak" class="link"
-              >Portfolio</a
+              ><h2>Portfolio</h2></a
             >
           </h2>
         </header>
