add pl text to the website

--- a/src/pages/another.html
+++ b/src/pages/another.html
@@ -37,9 +37,9 @@
             Portfolio
           </h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-            minima assumenda expedita similique quaerat maiores ab, itaque hic
-            explicabo eaque!
+            Cześć! Miło mi, że zainteresowałeś się moim profilem 😊 Mam na imię
+            Kuba i jestem początkującym programistą. Zapraszam do zapoznania się
+            z moim portfolio.
           </p>
           <a href="#gallery">Więcej</a>
         </div>
@@ -60,12 +60,14 @@
           <div class="about-life">
             <h3>O mnie</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
-              consectetur asperiores harum dolore nihil fuga?Lorem ipsum dolor
-              sit, amet consectetur adipisicing elit. Voluptas, maxime
-              reprehenderit. Assumenda necessitatibus id consectetur asperiores
-              harum dolore nihil fuga?
+              Kuba, 25 lat. Pochodzę z Kujaw, od 6 lat mieszkam w Poznaniu.
+              Studiowałem … i … na Politechnice Poznańskiej. Do tej pory moja
+              ścieżka zawodowa dotyczyła gastronomii. Przez ostatnie dwa lata
+              pełniłem funkcje kierownicze w jednej z popularniejszych
+              poznańskich restauracji. Ta branża dużo uczy, nadszedł jednak czas
+              na powrót do korzeni i dalszy rozwój w kierunku IT. W wolnych
+              chwilach, jeśli akurat nie programuję, lubię gotować, pograć w
+              piłkę albo poczytać dobry kryminał.
             </p>
           </div>
           <div class="about-work">
