--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -33,9 +33,10 @@
             Portfolio
           </h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-            minima assumenda expedita similique quaerat maiores ab, itaque hic
-            explicabo eaque!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas,
+            maxime reprehenderit. Assumenda necessitatibus id consectetur
+            asperiores harum dolore nihil fuga?Lorem ipsum dolor sit, amet
+            consectetur adipisicing elit.
           </p>
           <a href="#gallery">More about me</a>
         </div>
