remove scss file

--- a/src/pages/another.html
+++ b/src/pages/another.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta
-      name="description"
-      content="Professional Photographer available for weddings and special events."
-    />
+    <meta name="description" content="My first portfolio" />
     <meta name="robots" content="index,follow" />
     <link rel="stylesheet" href="/src/scss/main.scss" />
     <title>Jakub Sobczak Portfolio</title>
@@ -37,17 +34,17 @@
             Portfolio
           </h2>
           <p>
-            Cześć! Miło mi, że zainteresowałeś się moim profilem 😊 Mam na imię
-            Kuba i jestem początkującym programistą. Zapraszam do zapoznania się
-            z moim portfolio.
+            Cześć! Miło mi, że zainteresowałaś/eś się moim profilem. 😊 Mam na
+            imię Kuba i jestem początkującym programistą. Zapraszam do
+            zapoznania się z moim portfolio.
           </p>
-          <a href="#gallery">Więcej</a>
+          <a href="#gallery">Portfolio</a>
         </div>
         <div class="hero-images">
           <img
-            class="hero-elena"
+            class="hero-jakub"
             src="/src/assets/img/zdjęcie_2.jpg"
-            alt="picture of elena joy"
+            alt="picture of jakub"
           />
         </div>
       </section>
@@ -61,21 +58,29 @@
             <h3>O mnie</h3>
             <p>
               Kuba, 25 lat. Pochodzę z Kujaw, od 6 lat mieszkam w Poznaniu.
-              Studiowałem … i … na Politechnice Poznańskiej. Do tej pory moja
-              ścieżka zawodowa dotyczyła gastronomii. Przez ostatnie dwa lata
-              pełniłem funkcje kierownicze w jednej z popularniejszych
-              poznańskich restauracji. Ta branża dużo uczy, nadszedł jednak czas
-              na powrót do korzeni i dalszy rozwój w kierunku IT. W wolnych
-              chwilach, jeśli akurat nie programuję, lubię gotować, pograć w
-              piłkę albo poczytać dobry kryminał.
+              Studiowałem Elektronikę i Telekomunikację oraz Informatykę na
+              Politechnice Poznańskiej. Do tej pory moja ścieżka zawodowa
+              dotyczyła głównie gastronomii. Przez ostatnie dwa lata pełniłem
+              funkcje kierownicze w jednej z popularniejszych poznańskich
+              restauracji. Ta branża dużo uczy, nadszedł jednak czas na powrót
+              do korzeni i dalszy rozwój w kierunku IT. W wolnych chwilach,
+              jeśli akurat nie programuję, lubię gotować, pograć w piłkę albo
+              poczytać dobry kryminał.
             </p>
           </div>
           <div class="about-work">
             <h3>Praca</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
-              consectetur asperiores harum dolore nihil fuga?
+              Obecnie chciałbym znaleźć zatrudnienie na stanowisku Junior
+              Front-end Developera. Posiadam podstawową wiedzę z zakresu
+              technologii HTML/CSS, zagadnień związanych z RWD oraz języka
+              JavaScript, GIT, SASS i Webpack. Zależy mi, by móc rozwijać swoją
+              wiedzę również na drodze zawodowej, dużo czasu poświęcam też na
+              naukę tych zagadnień w domu, co pozwoliło mi na stworzenie strony
+              internetowej oraz aplikacji opartej na Javascript. Interesuje mnie
+              tematyka front i backened development. Z czasem chciałbym zyskać
+              kompetencję pozwalające na pracę na stanowisku Fullstack
+              Developera.
             </p>
           </div>
         </div>
