--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="My first portfolio" />
     <meta name="robots" content="index,follow" />
     <link rel="stylesheet" href="/src/scss/main.scss" />
     <title>Jakub Sobczak Portfolio</title>
@@ -38,13 +39,13 @@
             asperiores harum dolore nihil fuga?Lorem ipsum dolor sit, amet
             consectetur adipisicing elit.
           </p>
-          <a href="#gallery">More about me</a>
+          <a href="#gallery">Portfolio</a>
         </div>
         <div class="hero-images">
           <img
-            class="hero-elena"
+            class="hero-jakub"
             src="/src/assets/img/zdjęcie_2.jpg"
-            alt="picture of elena joy"
+            alt="picture of jakub"
           />
         </div>
       </section>
