--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,10 +14,9 @@
       <nav>
         <h1 id="logo">Jakub Sobczak</h1>
         <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="/another.html">Polish</a></li>
+          <li><a href="#about">O mnie</a></li>
+          <li><a href="#work">Praca</a></li>
+          <li><a href="#contact">Kontakt</a></li>
         </ul>
         <div class="burger">
           <span class="line1"></span>
@@ -34,10 +33,9 @@
             Portfolio
           </h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas,
-            maxime reprehenderit. Assumenda necessitatibus id consectetur
-            asperiores harum dolore nihil fuga?Lorem ipsum dolor sit, amet
-            consectetur adipisicing elit.
+            Cześć! Miło mi, że zainteresowałaś/eś się moim profilem. 😊 Mam na
+            imię Kuba i jestem początkującym programistą. Zapraszam do
+            zapoznania się z moim portfolio.
           </p>
           <a href="#gallery">Portfolio</a>
         </div>
@@ -56,60 +54,66 @@
         <div class="about-text flex" id="work">
           <h2>Jakub Sobczak</h2>
           <div class="about-life">
-            <h3>My Life</h3>
+            <h3>O mnie</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
-              consectetur asperiores harum dolore nihil fuga?Lorem ipsum dolor
-              sit, amet consectetur adipisicing elit. Voluptas, maxime
-              reprehenderit. Assumenda necessitatibus id consectetur asperiores
-              harum dolore nihil fuga?
+              Kuba, 25 lat. Pochodzę z Kujaw, od 6 lat mieszkam w Poznaniu.
+              Studiowałem Elektronikę i Telekomunikację oraz Informatykę na
+              Politechnice Poznańskiej. Do tej pory moja ścieżka zawodowa
+              dotyczyła głównie gastronomii. Przez ostatnie dwa lata pełniłem
+              funkcje kierownicze w jednej z popularniejszych poznańskich
+              restauracji. Ta branża dużo uczy, nadszedł jednak czas na powrót
+              do korzeni i dalszy rozwój w kierunku IT. W wolnych chwilach,
+              jeśli akurat nie programuję, lubię gotować, pograć w piłkę albo
+              poczytać dobry kryminał.
             </p>
           </div>
           <div class="about-work">
-            <h3>My Work</h3>
+            <h3>Praca</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
-              consectetur asperiores harum dolore nihil fuga?
+              Obecnie chciałbym znaleźć zatrudnienie na stanowisku Junior
+              Front-end Developera. Posiadam podstawową wiedzę z zakresu
+              technologii HTML/CSS, zagadnień związanych z RWD oraz języka
+              JavaScript, GIT, SASS i Webpack. Zależy mi, by móc rozwijać swoją
+              wiedzę również na drodze zawodowej, dużo czasu poświęcam też na
+              naukę tych zagadnień w domu, co pozwoliło mi na stworzenie strony
+              internetowej oraz aplikacji opartej na Javascript. Interesuje mnie
+              tematyka front i backened development. Z czasem chciałbym zyskać
+              kompetencję pozwalające na pracę na stanowisku Fullstack
+              Developera.
             </p>
           </div>
         </div>
       </section>
       <div class="gallery" id="gallery">
         <header class="gallery-head">
-          <h2>
-            <a href="https://github.com/Jakub-Sobczak" class="link"
-              ><h2>Portfolio</h2></a
-            >
-          </h2>
+          <h2>Portfolio</h2>
         </header>
         <img
           class="gallery1"
           src="/src/assets/img/strona_1.png"
-          alt="html code"
+          alt="man in suit"
         />
         <img
           class="gallery2"
           src="/src/assets/img/strona_2.jpg"
-          alt="html code"
+          alt="lady in coat"
         />
         <img
           class="gallery1"
           src="/src/assets/img/strona_3.jpg"
-          alt="html code"
+          alt="lady in t-shirt"
         />
       </div>
       <section class="contact" id="contact">
         <div class="form-wrapper flex">
           <h2>
-            Get in <br />
-            <span> touch.</span>
+            Bądźmy w <br />
+            <span> kontakcie.</span>
           </h2>
           <form>
-            <label for="email">Your Email:</label>
+            <label for="email">Wprowadź Email:</label>
             <input type="email" id="email" required />
-            <button type="submit">Submit</button>
+            <button type="submit">Potwierdź</button>
           </form>
         </div>
         <img src="/src/assets/img/zdjęcie_3.png" alt="message-icon" />
