--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,7 +15,7 @@
         <h1 id="logo">Jakub Sobczak</h1>
         <ul class="nav-links">
           <li><a href="#about">O mnie</a></li>
-          <li><a href="#work">Praca</a></li>
+          <li><a href="#about-work">Praca</a></li>
           <li><a href="#contact">Kontakt</a></li>
         </ul>
         <div class="burger">
@@ -67,7 +67,7 @@
               poczytać dobry kryminał.
             </p>
           </div>
-          <div class="about-work">
+          <div class="about-work" id="about-work">
             <h3>Praca</h3>
             <p>
               Obecnie chciałbym znaleźć zatrudnienie na stanowisku Junior
@@ -123,14 +123,14 @@
       <h4>Jakub Sobczak &copy; 2021</h4>
       <ul>
         <li>
-          <a href="#"
+          <a href="https://www.youtube.com/"
             ><img
               src="/src/assets/img/youtube-symbol 1.svg"
               alt="youtube-social-media"
           /></a>
         </li>
         <li>
-          <a href="https://www.facebook.com/"
+          <a href="https://twitter.com/"
             ><img
               src="/src/assets/img/twitter 1.svg"
               alt="twitter-social-media"
