add github link to portfolio

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -86,7 +86,7 @@
       </section>
       <div class="gallery" id="gallery">
         <header class="gallery-head">
-          <h2>Portfolio</h2>
+         <a href="https://github.com/Jakub-Sobczak"><h2>Portfolio</h2></a> 
         </header>
         <img
           class="gallery1"
