--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -91,17 +91,17 @@
         <img
           class="gallery1"
           src="/src/assets/img/strona_1.png"
-          alt="man in suit"
+          alt="programming code"
         />
         <img
           class="gallery2"
           src="/src/assets/img/strona_2.jpg"
-          alt="lady in coat"
+          alt="programming code"
         />
         <img
           class="gallery1"
           src="/src/assets/img/strona_3.jpg"
-          alt="lady in t-shirt"
+          alt="programming code"
         />
       </div>
       <section class="contact" id="contact">
