add favicon icon

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="My first portfolio" />
     <meta name="robots" content="index,follow" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="/src/scss/main.scss" />
     <title>Jakub Sobczak Portfolio</title>
   </head>
