change text bug

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -78,8 +78,8 @@
               wiedzę również na drodze zawodowej, dużo czasu poświęcam też na
               naukę tych zagadnień w domu, co pozwoliło mi na stworzenie strony
               internetowej oraz aplikacji opartej na Javascript. Interesuje mnie
-              tematyka front i backened development. Z czasem chciałbym zyskać
-              kompetencję pozwalające na pracę na stanowisku Fullstack
+              tematyka front i backend development. Z czasem chciałbym zyskać
+              kompetencje pozwalające na pracę na stanowisku Fullstack
               Developera.
             </p>
           </div>
